dataset1235/2025-2/1955397009/users/1253623235/executions/1107611404_1626817775.log
== RUN (2025-08-22 17:32:42)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

print(raio)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio:0.1
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio:4.5
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio:12.34
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio:11.0
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio:67.34
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio:2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:45:25)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=(4/3)*pi * (a**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 17:25:15)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = int(float("Digite o valor do raio:"))
print(raio)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:40:51)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=float((4/3)*pi*a**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 17:24:31)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = int(float("Digite o valor do raio:"))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:25:26)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = int(float("Digite o valor do raio:"))
print(raio)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:33:07)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

print(a)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio:0.031415926535897934
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio:63.61725123519331
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio:478.3879062809779
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio:380.132711084365
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio:14246.10355137289
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio:12.566370614359172
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:43:12)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=float((4/3)*pi*a**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:29:26)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

print(raio)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:25:23)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = int(float("Digite o valor do raio:"))
print(raio)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:29:15)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

print(raio)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a= pi*raio**2
       ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:42:52)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=float((4/3)*pi*a**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:34:41)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

print(round(a, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio:0.031
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio:63.617
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio:478.388
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio:380.133
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio:14246.104
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio:12.566
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:43:48)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=((4/3)*pi*a**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:46:05)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=float(4/3)*pi * (a**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 20:29:42)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
Vr = float(input(""))

A = pi*Vr**2
V = 4/3*pi*Vr**3

print(round(A, 3))
print(round(V, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 17:47:55)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=float(4/3)*pi * (raio**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 17:23:42)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
int(float("Digite o valor do raio:"))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(float("Digite o valor do raio:"))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(float("Digite o valor do raio:"))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(float("Digite o valor do raio:"))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(float("Digite o valor do raio:"))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(float("Digite o valor do raio:"))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    int(float("Digite o valor do raio:"))
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:44:35)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=((4/3)*pi * a**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:26:11)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = float(input("Digite o valor do raio:"))
print(raio)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Digite o valor do raio:0.1
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Digite o valor do raio:4.5
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Digite o valor do raio:12.34
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Digite o valor do raio:11.0
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Digite o valor do raio:67.34
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Digite o valor do raio:2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:47:42)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=float(4/3)*pi * (raio**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:38:07)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v= (4/3)*pi*a**3


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:38:47)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v= ((4/3)*pi*a**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 17:24:26)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
raio = int(float("Digite o valor do raio:"))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    raio = int(float("Digite o valor do raio:"))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'Digite o valor do raio:'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 17:43:39)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
raio = float(input("Digite o valor do raio:"))
a= pi*raio**2

v=((4/3)*pi*a**3)


print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.0
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
1078483.016
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
458594862.941
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
230088195.628
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
12110913428210.83
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
8312.242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
